<resources>
    <string name="app_name">Crazy Layouts</string>
    <string name="boton_saltar_text">Saltar</string>
    <string name="tv_conectar">Conectar</string>
    <string name="et_correo">Correo</string>
    <string name="et_contrasena">Contraseña</string>
    <string name="boton_iniciar_sesion">Iniciar Sesion</string>
    <string name="tv_olvidaste_contrasena">Olvidaste tu constraseña</string>
    <string name="et_nombre">Nombres</string>
    <string name="et_apellidos">Apellidos</string>
    <string name="tv_estado_civil">Estado Civil</string>
    <string name="tv_cargo">Cargo</string>
</resources>